fix post annonce